--- a/conference-xml/pom.xml
+++ b/conference-xml/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.luisenricke</groupId>
-    <artifactId>conference</artifactId>
+    <artifactId>conference-xml</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
