--- a/conference-demo/src/main/resources/application.properties
+++ b/conference-demo/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+server.port=5000
