--- a/conference-demo/src/main/resources/application.properties
+++ b/conference-demo/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/conference_demo?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=${DB_URL}
 spring.datasource.username=root
 spring.datasource.password=password
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
