--- a/conference-demo/src/main/resources/application.properties
+++ b/conference-demo/src/main/resources/application.properties
@@ -1,15 +1,14 @@
 spring.datasource.url=${DB_URL}
 spring.datasource.username=root
 spring.datasource.password=password
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+# spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.show-sql=true
-
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+# spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
-server.port=5000
+# server.port=8080
