--- a/trackzilla/src/main/resources/application-dev.properties
+++ b/trackzilla/src/main/resources/application-dev.properties
@@ -1,9 +1,7 @@
 # logging.level.org.springframework=DEBUG
 
 # H2 configurations
-spring.datasource.url=jdbc:h2:mem:bug_tracker
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.h2.console.enable=true
+spring.h2.console.enabled=true
 spring.h2.console.path=/h2
+
+spring.datasource.url=jdbc:h2:mem:bugtracker
