--- a/trackzilla/src/main/resources/application.properties
+++ b/trackzilla/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 
 spring.profiles.active=dev
+
+# Thymeleaf
+spring.thymeleaf.template-loader-path=classpath:/templates
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
