--- a/trackzilla/src/main/resources/application.properties
+++ b/trackzilla/src/main/resources/application.properties
@@ -5,3 +5,12 @@ spring.profiles.active=dev
 spring.thymeleaf.template-loader-path=classpath:/templates
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
+
+# GraphQL
+graphql.servlet.mapping=/graphql
+graphql.servlet.enabled=true
+graphql.servlet.corsEnabled=true
+
+graphiql.enabled=true
+graphiql.endpoint=/graphql
+graphiql.mapping=graphiql
