Change graphiql properties

--- a/trackzilla/src/main/resources/application-dev.properties
+++ b/trackzilla/src/main/resources/application-dev.properties
@@ -5,3 +5,8 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 
 spring.datasource.url=jdbc:h2:mem:bugtracker
+
+# GraphQL
+graphiql.enabled=true
+graphiql.endpoint=/graphql
+graphiql.mapping=graphiql
