--- a/trackzilla/src/main/resources/application.properties
+++ b/trackzilla/src/main/resources/application.properties
@@ -11,4 +11,6 @@ graphql.servlet.mapping=/graphql
 graphql.servlet.enabled=true
 graphql.servlet.corsEnabled=true
 
-
+# Actuator
+management.endpoints.web.exposure.include=info,health,metrics,loggers,beans,mappings
+management.endpoint.health.show-details=always
