--- a/ridetracker/src/main/resources/application-dev.properties.example
+++ b/ridetracker/src/main/resources/application-dev.properties.example
@@ -4,12 +4,12 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 
-#spring.datasource.url=jdbc:h2:mem:ride_tracker
+# spring.datasource.url=jdbc:h2:mem:database_name
 
 # MySQL
-#spring.datasource.url=${DB_URL}
-spring.datasource.username=root
-spring.datasource.password=password
+# spring.datasource.url=url
+spring.datasource.username=
+spring.datasource.password=
 # spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=none
