--- a/ridetracker/build.gradle
+++ b/ridetracker/build.gradle
@@ -18,10 +18,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
-    implementation 'org.springframework:spring-jdbc:4.3.6.RELEASE'
     compileOnly 'org.springframework:spring-webmvc:5.2.4.RELEASE'
+    implementation 'org.springframework:spring-context:5.2.5.RELEASE'
+    implementation 'org.springframework:spring-jdbc:5.2.5.RELEASE'
 
-    implementation 'mysql:mysql-connector-java:6.0.5'
+    implementation 'mysql:mysql-connector-java:8.0.19'
 
     compileOnly 'javax.servlet:servlet-api:2.5'
     implementation 'log4j:log4j:1.2.17'
